Login and Register

--- a/CoffeeANDTea-0a03fd2ca1e23383a30a449f583493fc09e7200e/Views/Drinks/Details.cshtml
+++ b/CoffeeANDTea-0a03fd2ca1e23383a30a449f583493fc09e7200e/Views/Drinks/Details.cshtml
@@ -35,10 +35,11 @@
             @Html.DisplayFor(model => model.Bio)
         </dd>
         <dt class = "col-sm-2">
-            <img src="@Html.DisplayNameFor(model => model.Image)" width="200"/>
+            KARTINKA
+            @* @Html.DisplayNameFor(model => model.Image) *@
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Image)
+            <img src="@Html.DisplayFor(model => model.Image)" width="200" />
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Description)
