--- a/CoffeeANDTea-0a03fd2ca1e23383a30a449f583493fc09e7200e/Views/Drinks/Index.cshtml
+++ b/CoffeeANDTea-0a03fd2ca1e23383a30a449f583493fc09e7200e/Views/Drinks/Index.cshtml
@@ -46,7 +46,7 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.DrinkCategories.Id)
+                @Html.DisplayFor(modelItem => item.DrinkCategories.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Coffein)
