--- a/CoffeeANDTea-0a03fd2ca1e23383a30a449f583493fc09e7200e/Views/Shared/_Layout.cshtml
+++ b/CoffeeANDTea-0a03fd2ca1e23383a30a449f583493fc09e7200e/Views/Shared/_Layout.cshtml
@@ -88,11 +88,11 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="DrinkCategories" asp-action="Index">Категории напитки</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Drinks" asp-action="IndexTea">Видове ЧАЙ и Сортове КАФЕ</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Drinks" asp-action="IndexTea">Видове ЧАЙ </a>
                             </li>
-                            @* <li class="nav-item">
+                            <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Drinks" asp-action="IndexCoffee">Сортове КАФЕ</a>
-                            </li> *@
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Index">Пазарска кошница</a>
                             </li>
@@ -108,11 +108,11 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="DrinkCategories" asp-action="Index">Категории напитки</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Drinks" asp-action="IndexTea">Видове ЧАЙ и Сортове КАФЕ </a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Drinks" asp-action="Index" asp-route-catageryNum="1">Видове ЧАЙ </a>
                             </li>
-                            @* <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Drinks" asp-action="IndexCoffee">Сортове КАФЕ</a>
-                            </li> *@
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Drinks" asp-action="Index" asp-route-catageryNum="2">Сортове КАФЕ</a>
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Index">Пазарска кошница</a>
                             </li>
