--- a/CoffeeANDTea-0a03fd2ca1e23383a30a449f583493fc09e7200e/Views/DrinkCategories/Index.cshtml
+++ b/CoffeeANDTea-0a03fd2ca1e23383a30a449f583493fc09e7200e/Views/DrinkCategories/Index.cshtml
@@ -3,11 +3,21 @@
 @{
     ViewData["Title"] = "Index";
 }
-
+<style>
+    .buttons a{
+        background-color: #34ab2e;
+        border-color: #34ab2e;
+    }
+    .buttons a:hover{
+            background-color: #2f912a;
+            border-color: #2f912a;
+        }
+        
+</style>
 <h1>Категории напитки</h1>
 
 <p>
-    <a asp-action="Create">Добави нова категория</a>
+    <a class="btn btn-primary buttons" asp-action="Create">Добави нова категория</a>
 </p>
 <table class="table">
     <thead>
@@ -31,9 +41,12 @@
                 @Html.DisplayFor(modelItem => item.DateUpdate)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <div class="buttons">
+                        <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                        <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                        <a style="background-color:#b02a37; border-color: #b02a37;" class="btn btn-danger delete" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </div>
+                
             </td>
         </tr>
 }
