--- a/CoffeeANDTea-0a03fd2ca1e23383a30a449f583493fc09e7200e/Views/Drinks/Details.cshtml
+++ b/CoffeeANDTea-0a03fd2ca1e23383a30a449f583493fc09e7200e/Views/Drinks/Details.cshtml
@@ -11,50 +11,57 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            Име
+           @*  @Html.DisplayNameFor(model => model.Name) *@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DrinkCategories)
+            Категория
+            @* @Html.DisplayNameFor(model => model.DrinkCategories) *@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.DrinkCategories.Id)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Coffein)
+            Кофеин
+         @*    @Html.DisplayNameFor(model => model.Coffein) *@
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Coffein)
+            @Html.DisplayFor(model => model.Coffein) %
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Bio)
+            Био
+           @*  @Html.DisplayNameFor(model => model.Bio) *@ 
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Bio)
+            @Html.DisplayFor(model => model.Bio) 
         </dd>
         <dt class = "col-sm-2">
-            KARTINKA
+            Картинка
             @* @Html.DisplayNameFor(model => model.Image) *@
         </dt>
         <dd class = "col-sm-10">
             <img src="@Html.DisplayFor(model => model.Image)" width="200" />
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
+            Описание
+            @* @Html.DisplayNameFor(model => model.Description) *@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Description)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
+            Цена
+            @* @Html.DisplayNameFor(model => model.Price) *@
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Price)
+            @Html.DisplayFor(model => model.Price) лв.
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DateUpdate)
+            Дата
+          @*   @Html.DisplayNameFor(model => model.DateUpdate) *@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.DateUpdate)
