--- a/CoffeeANDTea-0a03fd2ca1e23383a30a449f583493fc09e7200e/Views/Drinks/Index.cshtml
+++ b/CoffeeANDTea-0a03fd2ca1e23383a30a449f583493fc09e7200e/Views/Drinks/Index.cshtml
@@ -3,94 +3,130 @@
 @{
     ViewData["Title"] = "Index";
 }
+<style>
+    .drink-cards {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        padding: 10px;
+        flex-wrap: wrap;
+    }
 
+    .drink {
+        width: 25.1%;
+        display: flex;
+        flex-direction: column;
+        border: 2.5px solid #878747;
+        margin-bottom: 50px;
+    }
+
+        .drink img {
+            max-width: 317.4px;
+            height: 200px;
+            object-fit: cover;
+        }
+
+    .drink-title {
+        text-align: center;
+        font-size: 20px;
+        border-bottom: 2.5px solid #878747;
+        background-color: #B2B263;
+        color: beige;
+    }
+
+    .drink-description {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+
+        .drink-description dt, .drink-description dd {
+            width: 50%;
+        }
+
+    .drink-price {
+        font-size: 25px;
+        font-weight: bold;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+    }
+    .order-button{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        margin-bottom: 10px;
+    #ccount{
+        width: 50%;
+    }
+    #order{
+        width: 48%;
+    }
+    #createdrink a{
+        background-color: #B2B263;
+        border-color: #B2B263;
+    }
+    #createdrink a:hover{
+            background-color: #878747;
+            border-color: #878747;
+        }
+</style>
 <center><h1>Напитки</h1></center>
-@* @if (User.IsInRole("Admin"))
-{ *@
+@if (User.IsInRole("Admin"))
+{ 
+    <div id="createdrink">
     <center><a class="btn btn-primary" asp-action="Create">Създаване на нова напитка</a></center>
-@* } *@
+</div>
+ }
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                Име
-               @*  @Html.DisplayNameFor(model => model.Name) *@
-            </th>
-            <th>
-                Категория
-                @* @Html.DisplayNameFor(model => model.DrinkCategories) *@
-            </th>
-            <th>
-                Кофеин
-               @*  @Html.DisplayNameFor(model => model.Coffein) *@
-            </th>
-            <th>
-                Био
-               @*  @Html.DisplayNameFor(model => model.Bio) *@
-            </th>
-            <th>
-                Изображение
-                @* @Html.DisplayNameFor(model => model.Image) *@
-            </th>
-            <th>
-                Описание
-               @*  @Html.DisplayNameFor(model => model.Description) *@
-            </th>
-            <th>
-                Цена
-               @*  @Html.DisplayNameFor(model => model.Price) *@
-            </th>
-            <th>
-                Дата
-                @* @Html.DisplayNameFor(model => model.DateUpdate) *@
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DrinkCategories.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Coffein) %
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Bio)
-            </td>
-            <td>
-                    <img src="@Html.DisplayFor(modelItem => item.Image)" width="80"/>
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DateUpdate)
-            </td>
-            <td>
-                    @if (User.IsInRole("Admin") && User.IsInRole("User"))
-                    {
-                        <form method="post" asp-controller="Orders" asp-action="CreateWithDrinkId" asp-route-drinkId="@item.Id">
-                            <input name="countP" id="ccount" type="number" width="3" value="1" style="color:red; font:bold" /> Броя
-                            <input type="submit" value="Поръчай" />
-                        </form>
-                    }
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-                
-        </tr>
-      
-           
-}
-    </tbody>
-</table>
+<div class="drink-cards">
+    @foreach (var item in Model)
+    {
+        <div class="drink">
+            <span class="drink-title">@Html.DisplayFor(model => item.Name)</span>
+            <img src="@Html.DisplayFor(model => item.Image)" />
+            <div class="drink-description">
+                <dt class="col-sm-2">
+                    Категория
+                    @* @Html.DisplayNameFor(model => model.DrinkCategories) *@
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => item.DrinkCategories.Name)
+                </dd>
+                <dt class="col-sm-2">
+                    Кофеин
+                    @*    @Html.DisplayNameFor(model => model.Coffein) *@
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => item.Coffein) %
+                </dd>
+                <dt class="col-sm-2">
+                    Био
+                    @*  @Html.DisplayNameFor(model => model.Bio) *@
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => item.Bio)
+                </dd>
+
+
+            </div>
+            <div class="drink-price">
+                <div><span>@Html.DisplayFor(model => item.Price) лв.</span></div>
+            </div>
+            
+            @if (User.IsInRole("Admin") && User.IsInRole("User"))
+            {
+                <div class="order-button">
+                    <form method="post" asp-controller="Orders" asp-action="CreateWithDrinkId" asp-route-drinkId="@item.Id">
+                        <input name="countP" id="ccount" type="number" width="3" value="1" />
+                        <input id="order" type="submit" value="Поръчай" />
+                    </form>
+@*                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> *@
+                </div>
+            }
+        </div>
+        }
+</div>
