--- a/CoffeeANDTea-0a03fd2ca1e23383a30a449f583493fc09e7200e/Views/Drinks/Edit.cshtml
+++ b/CoffeeANDTea-0a03fd2ca1e23383a30a449f583493fc09e7200e/Views/Drinks/Edit.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Изтрижане</h1>
 
-<h4>Drink</h4>
+<h4>Напитки</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -14,17 +14,18 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+                
+                <label asp-for="Name" class="control-label">Име</label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DrinkCategoriesId" class="control-label"></label>
+                <label asp-for="DrinkCategoriesId" class="control-label">Категория</label>
                 <select asp-for="DrinkCategoriesId" class="form-control" asp-items="ViewBag.DrinkCategoriesId"></select>
                 <span asp-validation-for="DrinkCategoriesId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Coffein" class="control-label"></label>
+                <label asp-for="Coffein" class="control-label">Кофеин</label>
                 <input asp-for="Coffein" class="form-control" />
                 <span asp-validation-for="Coffein" class="text-danger"></span>
             </div>
@@ -34,17 +35,17 @@
                 </label>
             </div>
             <div class="form-group">
-                <label asp-for="Image" class="control-label"></label>
+                <label asp-for="Image" class="control-label">Изображение</label>
                 <input asp-for="Image" class="form-control" />
                 <span asp-validation-for="Image" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
+                <label asp-for="Description" class="control-label">Информация</label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Price" class="control-label"></label>
+                <label asp-for="Price" class="control-label">Цена</label>
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
@@ -54,14 +55,14 @@
                 <span asp-validation-for="DateUpdate" class="text-danger"></span>
             </div> *@
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Запис" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Обратно към продукта</a>
 </div>
 
 @section Scripts {
