--- a/CoffeeANDTea-0a03fd2ca1e23383a30a449f583493fc09e7200e/Views/Drinks/Details.cshtml
+++ b/CoffeeANDTea-0a03fd2ca1e23383a30a449f583493fc09e7200e/Views/Drinks/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Повече информация за напитките</h1>
 
 <div>
-    <h4>Drink</h4>
+    <h4>Напитки</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -69,6 +69,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Изтриване</a> |
+    <a asp-action="Index">Обратно към предишната страница</a>
 </div>
